@@ -22,6 +22,7 @@ For users:
 - New: Added a link from product list to their stock movements.
 - New: Several speed enhancements after using the Google Page speed 
   plugin for FireBug.
+- New: Add a confirmation on dangerous admin purge feature.
 - Fix: Fix payment conditions on commercial proposals.
 - Fix: Nb of orders to process was wrong.
 - Fix: Customer code was not correct on PDF it if contains special 
